quarkus-kafka-producer/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-quickstarts.git
  labels:
    app.kubernetes.io/name: order-ms
  name: order-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: order-ms
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-quickstarts.git
      labels:
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/name: order-ms
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/ibmcase/order-mgr
        imagePullPolicy: Always
        # imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: order-ms
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user-cert
          readOnly: false
          subPath: ""
      serviceAccount: app-sa
      volumes:
      - name: kafka-cert
        secret:
          defaultMode: 384
          optional: true
          secretName: my-kafka-cluster-ca-cert
      - name: user-cert
        secret:
          defaultMode: 384
          optional: true
          secretName: tls-user
