quarkus-kafka-producer/kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-06-04 - 20:25:20 +0000
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-quickstarts.git
    app.quarkus.io/commit-id: d0a382ad1d3518c79e595abd6df442e858fb5d1c
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-quickstarts.git
  labels:
    app.kubernetes.io/name: order-ms
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app: order-cmd-ms
    app.openshift.io/runtime: quarkus
  name: order-ms
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: order-ms
